bug fixes for icons on projects/welcome page. Fixed overflow on mobile projects/about page.

--- a/client/src/styles/simple/theme-simple-global.css
+++ b/client/src/styles/simple/theme-simple-global.css
@@ -288,21 +288,18 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: calc(1.1 * var(--text-h1));
+  font-size: var(--text-h1);
   margin-top: var(--text-h2);
-  height: var(--text-h1);
-  width: var(--text-h1);
+  padding: calc(0.15 * var(--text-h3));
 }
 
 .click-here:hover {
   cursor: pointer;
 }
-
 @media screen and (max-width: 480px) {
   .click-here {
     font-size: calc(0.6 * var(--text-h1));
-    height: calc(0.5 * var(--text-h1));
-    width: calc(0.5 * var(--text-h1));
+    padding: calc(0.1 * var(--text-h3));
   }
 }
 
@@ -380,7 +377,8 @@ p {
 
 @media screen and (max-width: 480px) {
   .about-content-header {
-    width: 86%;
+    margin-left: 0;
+    width: 100%;
   }
   #skiing-image {
     width: 35%;
@@ -412,9 +410,10 @@ p {
   border: black solid 1px;
   border-radius: 5px;
   position: relative;
-  width: 45%;
+  width: 44%;
   height: 45%;
   margin: 1%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -433,11 +432,10 @@ p {
   border: none;
   left: 1%;
   top: 1%;
-  width: calc(1.2 * var(--text-h3));
-  height: calc(1.2 * var(--text-h3));
   background: none;
   border-radius: 50%;
-  font-size: calc(0.7 * var(--text-h3));
+  font-size: calc(1 * var(--text-h3));
+  padding: calc(0.2 * var(--text-h3));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -471,9 +469,8 @@ p {
     flex-direction: column;
   }
   .project-card {
-    min-width: 100%;
+    min-width: 95%;
     height: 22%;
-    margin: 0.5%;
   }
 
   .project-card img {
@@ -486,6 +483,7 @@ p {
   }
   .project-card-view {
     bottom: 30%;
+    width: 40%;
   }
 }
 
